# Academics

./: LICENSE  README.md
CSE305_Database_Final_Project/: README.md  proj2_tables.sql  proj2_values.sql
CSE305_Database_Final_Project/Dump/: Default_Accounts.sql  Default_Clients.sql  Default_Employees.sql  Default_Locations.sql  Default_Orders.sql  Default_Passwords.sql  Default_Persons.sql  Default_Stocks.sql  Default_Trade.sql  Default_Transactions.sql
CSE_219_Software_Development_Final_Project/: README.md
CSE_306_Operating_System/: README.md
CSE_306_Operating_System/HW1/: ThreadCB.java  TimerInterruptHandler.java
CSE_306_Operating_System/HW2/: README
CSE_306_Operating_System/HW2/Memory/: FrameTableEntry.java  MMU.java  PageFaultHandler.java  PageTable.java  PageTableEntry.java
CSE_306_Operating_System/HW3/: README
CSE_306_Operating_System/HW3/Devices/: Device.java  (+2 more)
CSE_320/hw2/: CMakeLists.txt
CSE_320/hw2/include/: choices.h  functions.h  rolodefs.h
CSE_320/hw2/include/toolsdir/: basics.h
CSE_320/hw2/src/: menuaux.c  rolo.c  update.c
CSE_320/hw2/src/toolsdir/: ctools.c  mem.c
CSE_320/hw4/: CMakeLists.txt
CSE_320_System_Fundamentals/hw5/: CMakeLists.txt
CSE_320_System_Fundamentals/hw5/src/: protocol.c
CSE_320_System_Fundentmentals/: README.md
CSE_320_System_Fundentmentals/hw3/: CMakeLists.txt
CSE_356_Cloud_Computing_HW/: .gitignore  README.md  server_setup.sh
CSE_356_Cloud_Computing_HW/Cloud Computing Notes(Latext)/: cloudcomputing.tex  examples.tex
CSE_356_Cloud_Computing_HW/HW1 & HW0/: apache_reverse_proxy.conf
CSE_356_Cloud_Computing_HW/HW2/: hw2.sh
CSE_356_Cloud_Computing_HW/HW3/: Dockerfile
CSE_356_Cloud_Computing_HW/HW4/: hw4.js
CSE_356_Cloud_Computing_HW/HW5/: ngix_round_robin_balanacer_proxy  setup.sh
CSE_356_Cloud_Computing_HW/HW6/: app.js  cassandra_server.js  package.json
CSE_356_Cloud_Computing_HW/HW7/: elasticsearch.sh  test_data.json  test_meta_mapping.json
CSE_356_Cloud_Computing_HW/HW8/: hw8.js  hw8.sh  package.json
CSE_356_Cloud_Computing_HW/HW9/: avg_model.py  setup.sh
CSE_356_Cloud_Computing_HW/warm_up#1/: index.html  package.json  server.js  style.css  ttt.css  ttt.html  ttt.js
CSE_356_Cloud_Computing_HW/warm_up#2/: .env  app.js  package.json
CSE_363_Offensive_Security/: README.md
CSE_363_Offensive_Security/HW1/: sniffer.py
CSE_363_Offensive_Security/HW2/: README.txt  capture.cap  dnspoison.py  hostnames.txt
CSE_363_Offensive_Security/HW3/: CMakeLists.txt  README.txt  main.c  numbers.txt
CSE_363_Offensive_Security/HW4/: CMakeLists.txt  README.txt  vuln1  vuln1.c  vuln2  vuln2.c  vuln3.c
CSE_376_Advanced_UNIX_Porgramming/: README.md
CSE_376_Advanced_UNIX_Porgramming/hw1-xiangsgao/: CMakeLists.txt  Makefile  README
CSE_376_Advanced_UNIX_Porgramming/hw1-xiangsgao/include/: constants_and_prototypes.h  crypto.h
CSE_376_Advanced_UNIX_Porgramming/hw1-xiangsgao/src/: crypto.c  main.c
CSE_376_Advanced_UNIX_Porgramming/hw1-xiangsgao/test/: test.sh  test.txt
CSE_376_Advanced_UNIX_Porgramming/hw2-xiangsgao/: CMakeLists.txt  Makefile  README  test.sh
CSE_376_Advanced_UNIX_Porgramming/hw3-xiangsgao/: CMakeLists.txt  Makefile  README  test.sh
CSE_416_Software_Engineering/: README.md
(+137 files in other folders)
